--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,7 @@
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/user-microservices
+    username: root
+    password: Mysql@123
+    driver-class-name: com.mysql.cj.jdbc.Driver
